--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=restaurant-managment_app
 
 logging.info.org.springframework=debug
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant-ordering-database
-spring.datasource.username=spacecraft12
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Spacecraft123$
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
