--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,20 @@
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
+    "html-to-image": "^1.11.13",
+    "jszip": "^3.10.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.29.1",
     "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.11",
     "use-sound": "^5.0.0"
