--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
