--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "html-to-image": "^1.11.13",
@@ -23,6 +24,7 @@
     "jszip": "^3.10.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
