got spring security almost setup

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 
+spring.security.user.name="Rohith"
+spring.security.user.password="Hello123"
 
-openai.api.key=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
-openai.api.url=https://api.openai.com/v1/chat/completions
+spring.datasource.url=jdbc:mysql://localhost:3306/USER_PASSWORD?useSSL=false&serverTimezone=UTC
+
