finished auth for admin

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.security.user.name="Rohith"
 spring.security.user.password="Hello123"
 
+jwt.secret=TWVuMlNlY3JldEtleTQyMDI1N1NtYXJ0T3JkZXIxU2VjdXJKV1RLZXk2Cg==
+jwt.expiration=86400000
 
