added env variables profiles and got password reset to work for admin side

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,20 +1,28 @@
-spring.application.name=restaurant-managment_app
+spring.application.name=restaurant-management-app
 
-logging.info.org.springframework=debug
+logging.level.org.springframework=info
 spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Spacecraft123$
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 
-spring.security.user.name="Rohith"
-spring.security.user.password="Hello123"
 
-jwt.secret=TWVuMlNlY3JldEtleTQyMDI1N1NtYXJ0T3JkZXIxU2VjdXJKV1RLZXk2Cg==
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.debug=false
