--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Application configuration files
+application.properties
+application.yml
+application-*.properties
+application-*.yml
