--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 
 jwt.secret=${JWT_SECRET}
-jwt.expiration=86400000
 
+jwt.expiration=86400000        
+jwt.refresh.expiration=604800000   
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
