--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=restaurant-management-app
 logging.level.org.springframework=info
 
 server.port=${PORT:8080}
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC}
 spring.datasource.username=${MYSQL_USER:${DB_USERNAME}}
 spring.datasource.password=${MYSQL_PASSWORD:${DB_PASSWORD}}
 
