--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ logging.level.org.springframework=info
 
 server.port=${PORT:8080}
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC}
-spring.datasource.username=${MYSQL_USER:${DB_USERNAME}}
-spring.datasource.password=${MYSQL_PASSWORD:${DB_PASSWORD}}
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:password}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
