--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=restaurant-management-app
 logging.level.org.springframework=info
 
 server.port=${PORT:8080}
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC}
-spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:password}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
