Use SPRING_DATASOURCE_URL variable

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,13 +3,9 @@ spring.application.name=restaurant-management-app
 logging.level.org.springframework=info
 
 server.port=${PORT:8080}
-spring.datasource.url=${MYSQL_URL}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=${JPA_SHOW_SQL:false}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
+spring.jpa.hibernate.ddl-auto=create-drop
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
