--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=${PORT:8080}
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
