--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,11 +3,9 @@ spring.application.name=restaurant-management-app
 logging.level.org.springframework=info
 
 server.port=${PORT:8080}
-spring.datasource.url=${SPRING_DATASOURCE_URL}
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=${JPA_SHOW_SQL:false}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Disable database temporarily
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
