--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,15 +1,8 @@
 spring.application.name=restaurant-management-app
-
-logging.level.org.springframework=info
-
 server.port=${PORT:8080}
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
-
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=${JPA_SHOW_SQL:false}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=${DATABASE_URL}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
