--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=restaurant-management-app
 server.port=${PORT:8080}
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
