--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,13 +1,22 @@
 spring.application.name=restaurant-management-app
-server.port=${PORT:8080}
-spring.datasource.url=jdbc:${DATABASE_URL}
+
+logging.level.org.springframework=info
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+
+
 
 jwt.secret=${JWT_SECRET}
-jwt.expiration=86400000
-jwt.refresh.expiration=604800000
 
+jwt.expiration=86400000        
+jwt.refresh.expiration=604800000   
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -18,3 +27,5 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.debug=false
+
+spring.web.resources.static-locations=file:../frontend/dist/
