--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,22 +1,26 @@
+# Application Config
 spring.application.name=restaurant-management-app
-
 logging.level.org.springframework=info
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
 
+# PostgreSQL Database Configuration (Render)
+spring.datasource.url=jdbc:postgresql://dpg-d2f9pe3s6dus73afhneg-a:5432/smartorder_db_tvj1
+spring.datasource.username=smartorder_db_tvj1_user
+spring.datasource.password=nzdknxpnGnanYMaX0rzStEuyogalQBbB
+
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Static Resources
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
-
-
+# JWT Configuration
 jwt.secret=${JWT_SECRET}
+jwt.expiration=86400000
+jwt.refresh.expiration=604800000
 
-jwt.expiration=86400000        
-jwt.refresh.expiration=604800000   
+# Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -27,5 +31,3 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.debug=false
-
-spring.web.resources.static-locations=file:../frontend/dist/
