--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,18 +1,22 @@
-# Application Config
 spring.application.name=restaurant-management-app
+
 logging.level.org.springframework=info
 
-# PostgreSQL Database Configuration (Render)
-spring.datasource.url=jdbc:postgresql://dpg-d2f9pe3s6dus73afhneg-a:5432/smartorder_db_tvj1
-spring.datasource.username=smartorder_db_tvj1_user
-spring.datasource.password=nzdknxpnGnanYMaX0rzStEuyogalQBbB
+# Database configuration - Railway compatible
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${DATABASE_USER:${DB_USERNAME}}
+spring.datasource.password=${DATABASE_PASSWORD:${DB_PASSWORD}}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate Configuration
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Static Resources
+# Server port (Railway will set this)
+server.port=${PORT:8080}
+
+# Serve React static files and file uploads
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 # JWT Configuration
