--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "cpy \"dist/**\" ../backend/src/main/resources/static/ --recursive",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -48,6 +50,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "cpy-cli": "^3.1.1",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
