--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=restaurant-management-app
 
 logging.level.org.springframework=info
 
-# Database configuration - Railway compatible
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/restaurant_db?useSSL=false&serverTimezone=UTC}
-spring.datasource.username=${DATABASE_USER:${DB_USERNAME}}
-spring.datasource.password=${DATABASE_PASSWORD:${DB_PASSWORD}}
+# Database configuration (Railway)
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Server port (Railway will set this)
+# Server port
 server.port=${PORT:8080}
 
 # Serve React static files and file uploads
