--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,26 +1,31 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/restaurant_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.application.name=restaurant-management-app
+
+logging.level.org.springframework=info
+spring.datasource.url=jdbc:mysql://resturantdb.ch44i66g2f4v.us-east-2.rds.amazonaws.com:3307/resturantDB?useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=Spacecraft123$
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-server.port=${PORT:8080}
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
-jwt.secret=${JWT_SECRET}
-jwt.expiration=86400000
-jwt.refresh.expiration=604800000
 
+
+jwt.secret=TWVuMlNlY3JldEtleTQyMDI1N1NtYXJ0T3JkZXIxU2VjdXJKV1RLZXk2Cg==
+
+jwt.expiration=86400000        
+jwt.refresh.expiration=604800000   
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=dineflowinc@gmail.com
+spring.mail.password=ytymhmbjbnctneam
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.debug=false
+
+sever.port=8080
